--- a/Machine_Learning/data_analysis/House Price (pipelined).ipynb
+++ b/Machine_Learning/data_analysis/House Price (pipelined).ipynb
@@ -106,7 +106,7 @@
    "outputs": [],
    "source": [
     "def getColInfo(train, dtype=None, cardinality_threshold=0):\n",
-    "    train_dtypes = [train[dt].dtype for dt in train.columns]\n",
+    "    train_dtypes = [trai[dt].dtype for dt in train.columns]\n",
     "    nuniques = [train[col].nunique() for col in train.columns]\n",
     "    res = pd.DataFrame({'Columns Names': train.columns,\n",
     "                                 'Dtypes': train_dtypes,\n",
